--- a/main.css
+++ b/main.css
@@ -3,13 +3,13 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:300");
 
 html, body, div, span, applet, object, iframe, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-		margin: 0;
-		padding: 0;
-		border: 0;
-		font-size: 100%;
-		font: inherit;
-		vertical-align: baseline;
-	}
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
 
 html, body {
 	margin: 0; padding: 0;
@@ -18,21 +18,29 @@ html, body {
 }
 
 h1 {
-	font-size: 10em;
+	font-size: 100%;
 	vertical-align: middle;
 	text-align: center;
 	font-family: sans-serif;
 	font-weight: 300;
 	text-transform: uppercase;
 	letter-spacing: 10px;
-  margin: 0; 
+  margin: 0;
 }
 
 a {
-    color: #5c305c;
-    text-decoration: none;
+  color: #5c305c;
+  text-decoration: none;
 }
 
 a:hover, a:focus {
-    color: #431549;
+  color: #431549;
+}
+
+#main {
+  height: 90%;
+  width:100%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
