--- a/main.css
+++ b/main.css
@@ -26,22 +26,17 @@ h1 {
 	letter-spacing: 10px;
   margin: 0;
 	padding-bottom: 20px;
-
-	position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-a {
-  color: #5c305c;
-  text-decoration: none;
-}
-
-a:hover, a:focus {
-  color: #431549;
 }
 
 #main {
   height: 80%;
   width:100%;
+}
+
+#image {
+	box-shadow: 7px 7px 10px 3px rgba(0, 0, 0, 0.2);
+	box-shadow: 5px;
+	height: 480px;
+	width: 480px;
+	margin: 30px auto;
 }
